# flask-test

./: .gitignore  README.md  app.py  config.py  manage.py  models.py  pyproject.toml  requirements.txt  tasks.py  utils.py  worker.py
api/: controllers.py  models.py  tasks.py
migrations/: env.py
migrations/versions/: c5019223fb42_init_migration.py
static/: d91ade16-5f0c-4a19-91c7-ed368e266162.html
