[tool.poetry]
name = "flask-test"
version = "0.1.0"
description = ""
authors = ["Petr <p>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
rq = "^1.5.0"
requests = "^2.24.0"
Werkzeug = "0.16.0"
flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
